# Detecting-number-of-people

./: LICENSE  README.md
ESP32-C6-Sensor/: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv
ESP32-C6-Sensor/main/: CMakeLists.txt  main.c  server_api_cert.pem  server_firebase_cert.pem
ESP32-C6-Sensor/main/google_api/: authentication.c  google_api.c  google_api.h
ESP32-C6-Sensor/main/led_indicator/: led_indicator.c  led_indicator.h
ESP32-C6-Sensor/main/measurement_utils/: sensor.c  utils.h
ESP32-C6-Sensor/main/people_counter/: people_counter.h  person_movement.c  person_movement.h
ESP32-C6-Sensor/main/platform/: platform.c  platform.h
ESP32-C6-Sensor/main/sd_card/: sd_card.c  sd_card.h
ESP32-C6-Sensor/main/vl53l7cx_uld_api/: changelog.txt  vl53l7cx_api.c
ESP32-C6-Sensor/main/wifi/: wifi_controller.c
Flutter-sensor_gui/: .gitignore  README.md  pubspec.yaml
Flutter-sensor_gui/lib/: main.dart  navigation_main_screen.dart  serial_monitor.dart
Flutter-sensor_gui/linux/: my_application.cc
Flutter-sensor_gui/test/: TestScenarios.md
Flutter-sensor_gui/web/: index.html  manifest.json
Flutter-sensor_gui/windows/: CMakeLists.txt
lib/VL53L7CX_ULD_driver_2.0.0/: README.md
references/: README.md
sensors/: README.md
sensors/Measured data/: TestScenarios.md
src/ESP32-C6-Sensor/: CMakeLists.txt  README.md  partitions.csv
src/ESP32-C6-Sensor/main/: CMakeLists.txt  blink_example_main.c  main.c
src/ESP32-C6-Sensor/main/google_api/: authentication.c  authentication.h  google_api.c  google_api.h
src/ESP32-C6-Sensor/main/led_indicator/: led_indicator.c  led_indicator.h
src/ESP32-C6-Sensor/main/measurement_utils/: measurement_utils.c  measurement_utils.h  sensor.c  sensor.h  utils.c  utils.h
src/ESP32-C6-Sensor/main/people_counter/: people_counter.c  people_counter.h  people_counter_correlation_matrix.c  people_counter_correlation_matrix.h  person_movement.c  person_movement.h
src/ESP32-C6-Sensor/main/platform/: platform.c
src/ESP32-C6-Sensor/main/sd_card/: sd_card.c  sd_card.h
src/ESP32-C6-Sensor/main/vl53l7cx_uld_api/: vl53l7cx_api.h  vl53l7cx_buffers.h
src/ESP32-C6-Sensor/main/wifi/: wifi_controller.c  wifi_controller.h
src/ESP32-VL53L7CXA/: CMakeLists.txt  platformio.ini
src/FirmwareUploader/: firmware.py  uploader.py
src/sensor_gui/: .gitignore  README.md  (+1 more)
(+96 files in other folders)
