idf_component_register(SRCS "main.c"
                        SRCS "platform/platform.c"
                        SRCS "wifi/wifi_controller.c"
                        SRCS "vl53l7cx_uld_api/vl53l7cx_api.c"
                        SRCS "google_api/google_api.c"
                        SRCS "google_api/authentication.c"
                        SRCS "measurement_utils/utils.c"
                        SRCS "measurement_utils/sensor.c"
                        SRCS "sd_card/sd_card.c"
                        SRCS "people_counter/people_counter.c"
                        SRCS "led_indicator/led_indicator.c"
                        SRCS "people_counter/people_counter_correlation_matrix.c"
                        SRCS "people_counter/person_movement.c"
                       INCLUDE_DIRS "."
                       EMBED_TXTFILES "server_cert.pem" "server_api_cert.pem" "server_firebase_cert.pem")
