idf_component_register(SRCS "main.c"
                        SRCS "platform/platform.c"
                        SRCS "wifi/wifi_controller.c"
                        SRCS "vl53l7cx_uld_api/vl53l7cx_api.c"
                        SRCS "google_api/google_api.c"
                        SRCS "google_api/authentication.c"
                        SRCS "measurement_utils/utils.c"
                        SRCS "measurement_utils/sensor.c"
                        SRCS "sd_card/sd_card.c"
                        SRCS "people_counter/people_counter.c"
                        SRCS "led_indicator/led_indicator.c"
                       INCLUDE_DIRS "."
                       EMBED_TXTFILES server_cert.pem)
